# 26a-emb-aps-1-horadeaps

main/: Blue.h  CMakeLists.txt  Green.h  Red.h  Save.c  Save.h  Yellow.h  fahhhhh.h  lcd.c  lcd.h  main.c  win.h
main/tft_lcd_ili9341/: CMakeLists.txt
main/tft_lcd_ili9341/ili9341/: ili9341.c
